2015-02-26  François  <francois@dechelle.net>

	* adding use of epoll()

	* added skeleton of scan daemon

	* reorganisation of directories for daemon implementation

2015-02-24  François  <francois@dechelle.net>

	* added quarantine implementation; tested

2015-02-19  François  <francois@dechelle.net>

	* changed modules scan function in order to pass file mime type, so that modules can make scan decisions based on mime-type

	* adding quarantine as module

2015-02-11  François  <francois@dechelle.net>

	* added output in protocol handler

	* added callbacks in protocol handler

2015-02-10  François  <francois@dechelle.net>

	* implemented first working version of protocol handler

	* adding scan process protocol implementation

2015-01-26  François  <francois@dechelle.net>

	* removed alert sending via HTTPS, replaced by writing a file (changes in agent)

2015-01-23  François  <francois@dechelle.net>

	* added summary print and better option parsing to uhuru-scan CLI

2015-01-08  François  <francois@dechelle.net>

	* fixed installation directory for modules w.r.t. CentOS packaging

2015-01-07  François  <francois@dechelle.net>

	* renamed umwsu-scan to uhuru-scan

	* fixed compilation problem w.r.t. CentOS and glib2 version. TODO: check use of g_private_new for glib2 recent versions

2014-11-28  François  <francois@dechelle.net>

	* started implementing the scan daemon

2014-11-05  François  <francois@dechelle.net>

	* added maximum count of error messages in alert.c

2014-10-28  François  <francois@dechelle.net>

	* changed alert reporting URL for HTTPS, added necessary libcurl options

2014-10-16  François  <francois@dechelle.net>

	* fixed compilation problem when building package on ubuntu 12.04

2014-09-26  François  <francois@dechelle.net>

	* changed alert reporting code to use local Perl agent via HTTP/Post request; tested

2014-09-14  François Déchelle  <francois@dechelle.net>

	* fixed status % undecided
