@@ -3,10 +3,12 @@
 
 #include <stdio.h>
 #include <stdlib.h>
+#include <glib.h>
 
 struct client {
   int sock;
   struct protocol_handler *handler;
+  struct umwsu *u;
 };
 
 static void cb_ping(struct protocol_handler *h, void *data)
@@ -21,9 +23,14 @@ static void cb_ping(struct protocol_handler *h, void *data)
 static void cb_scan(struct protocol_handler *h, void *data)
 {
   struct client *cl = (struct client *)data;
+  char *path = protocol_handler_header_value(h, "Path");
 
   fprintf(stderr, "callback cb_scan\n");
-  fprintf(stderr, "Path: %s\n", protocol_handler_header_value(h, "Path"));
+  fprintf(stderr, "Path: %s\n", path);
+
+  /* créer struct scan */
+  /* ajouter le callback d'envoi */
+  /* créer un thread */
 
   protocol_handler_output_message(cl->handler, "SCAN_FILE", 
 				  "Path", "/var/tmp/foo/bar/zob1", 
@@ -45,12 +52,13 @@ static void cb_stat(struct protocol_handler *h, void *data)
   fprintf(stderr, "callback cb_stat\n");
 }
 
-struct client *client_new(int client_sock)
+struct client *client_new(int client_sock, struct umwsu *u)
 {
   struct client *cl = (struct client *)malloc(sizeof(struct client));
 
   cl->sock = client_sock;
   cl->handler = protocol_handler_new(cl->sock, cl->sock);
+  cl->u = u;
 
   protocol_handler_add_callback(cl->handler, "PING", cb_ping, cl);
   protocol_handler_add_callback(cl->handler, "SCAN", cb_scan, cl);
