@@ -1,0 +1,6 @@
+#ifndef _LIBUMWSU_REMOTE_H_
+#define _LIBUMWSU_REMOTE_H_
+
+extern struct umwsu_module umwsu_mod_remote;
+
+#endif
